tests/paczka1/small_fuzzy/99563660.err
Error in line 3: AbDwBWWuuKM A237 31,6
Error in line 4: A237 A364 67,7
Error in line 9: Cf1Glmrd A364 14,9
Error in line 15: Cf1Glmrd A147 17,5
